--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ajex B George | Cybersecurity Portfolio</title>
+  <title>Ajex B George | Cybersecurity Pirate</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Pirate Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- Hero Section -->
   <header>
     <div class="container">
-      <h1>Hi, I'm <span>Ajex B George</span> 👋</h1>
-      <p>I am a BCA graduate and currently pursuing Advanced Diploma in Information Security (ADIS) at Offenso Hacker Academy, Calicut. Passionate about penetration testing, networking, and cybersecurity research.</p>
-      <a href="resume.pdf" class="btn" target="_blank">📄 Download Resume</a>
+      <h1>☠️ Ahoy! I'm <span>Ajex B George</span></h1>
+      <p>
+        I am a BCA graduate and currently pursuing Advanced Diploma in Information Security (ADIS) 
+        at Offenso Hacker Academy, Calicut. Passionate about penetration testing, networking, and 
+        cybersecurity research. Sailing the digital seas as a Cybersecurity Pirate ⚓
+      </p>
+      <a href="resume.pdf" class="btn" target="_blank">📄 View My Resume</a>
     </div>
   </header>
 
@@ -21,7 +27,9 @@
     <div class="container">
       <h2>About Me</h2>
       <p>
-        Enthusiastic and detail-oriented Cyber Security Researcher with a strong foundation in networking, ethical hacking, and information security.
+        Enthusiastic and detail-oriented Cyber Security Researcher with a strong foundation in networking, 
+        ethical hacking, and information security. Currently navigating the waters of penetration testing 
+        and digital defense.
       </p>
     </div>
   </section>
@@ -29,7 +37,7 @@
   <!-- Skills Section -->
   <section id="skills">
     <div class="container">
-      <h2>Skills</h2>
+      <h2>⚔️ Skills</h2>
       <ul>
         <li>🔐 Networking & Security: TCP/IP, Firewalls, IDS</li>
         <li>🛠 Cybersecurity Tools: Wireshark, Nmap, Metasploit, Burp Suite</li>
@@ -42,24 +50,15 @@
   <!-- Projects Section -->
   <section id="projects">
     <div class="container">
-      <h2>Projects</h2>
-      <div class="project-card">
-        <h3>🔎 Python Port Scanner</h3>
-        <p>A simple port scanner built in Python to identify open ports on a target system.</p>
-        <a href="https://github.com/ajex13george" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>📡 Nmap Cheat Sheet</h3>
-        <p>Collection of Nmap commands and use cases for penetration testing labs.</p>
-        <a href="https://github.com/ajex13george" target="_blank">View on GitHub</a>
-      </div>
+      <h2>🏴‍☠️ Projects</h2>
+      <p>⚔️ Projects are coming soon... Currently working on cybersecurity labs and research!</p>
     </div>
   </section>
 
   <!-- Contact Section -->
   <section id="contact">
     <div class="container">
-      <h2>Contact</h2>
+      <h2>📬 Contact</h2>
       <p>📧 <a href="mailto:ajex13george@gmail.com">ajex13george@gmail.com</a></p>
       <p>🔗 <a href="https://linkedin.com/in/ajex-b-george-881802300" target="_blank">LinkedIn</a></p>
       <p>💻 <a href="https://github.com/ajex13george" target="_blank">GitHub</a></p>
@@ -67,7 +66,8 @@
   </section>
 
   <footer>
-    <p>© 2025 Ajex B George | Built with ❤️ using GitHub Pages</p>
+    <p>☠️ © 2025 Ajex B George | Cybersecurity Pirate Portfolio</p>
   </footer>
 </body>
 </html>
+
