--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </section>
 
   <footer>
-    <p>☠️ © 2025 Ajex B George | Cybersecurity Pirate Portfolio</p>
+    <p>☠️ © 2025 Ajex B George | Securing the Digital Seas ⚓</p>
   </footer>
 </body>
 </html>
